--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Building CNN model with Optimal Transportation for Animal Recognition</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,10 +54,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
+										<p>Abstract<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Camera traps are a widely used tool in wildlife research and conservation, but factors such as changing of cameras, poor performance in extreme environments and damage by wildlife may be hindering the effectiveness of the technology. Our project is trying to solve the problem of changing cameras by adding the optimal transportation layer to our modified ALexNet CNN model that will be trained on the iwildCam dataset from WILDs collected by Stanford. In order to make our model more efficient and precise, we will also try to remove the background in each image that will only have the animal in the image and normalize these images with z-score methods to adjust pixels to a common scale. For testing, we will build the same model without optimal transportation strategies or these optimization steps we build to evaluate our models.</p>
 								</div>
 							</section>
 
