--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>Building CNN model with Optimal Transportation for Animal Recognition</h2>
 										<p>Abstract<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<a href="http://html5up.net"></a>.</p>
 									</header>
 									<p>Camera traps are a widely used tool in wildlife research and conservation, but factors such as changing of cameras, poor performance in extreme environments and damage by wildlife may be hindering the effectiveness of the technology. Our project is trying to solve the problem of changing cameras by adding the optimal transportation layer to our modified ALexNet CNN model that will be trained on the iwildCam dataset from WILDs collected by Stanford. In order to make our model more efficient and precise, we will also try to remove the background in each image that will only have the animal in the image and normalize these images with z-score methods to adjust pixels to a common scale. For testing, we will build the same model without optimal transportation strategies or these optimization steps we build to evaluate our models.</p>
 								</div>
