--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="#one" class="active">Abstract</a></li>
 						<li><a href="#two">Introduction</a></li>
-						<li><a href="#three">Methods</a></li>
+						<li><a href="#three">Methods and Result</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -80,7 +80,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Methods and Results</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>For the method part, we mainly worked on three methods as below. The first two methods are more like a preparation of the data set before building the model and the last method is how we build our model.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
