--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/BillChen24/DSC180B-Project-B319-2" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -84,9 +84,73 @@
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+
+											<div class="inner">
+												<h4>Background Extraction</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+
+											</div>
+											<br><br>
+											<div id="gallery">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+
 											<div class="inner">
 												<h4>Background Removal</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+											<br><br>
+											<div id="gallery">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
 											</div>
 										</article>
 										<article>
