--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Building CNN model with Background Removal for Animal Recognition</h2>
+										<h2>Generalize Animal Recognition CNN model with Background Removal</h2>
 										<p>Abstract<br />
 										<a href="http://html5up.net"></a></p>
 									</header>
@@ -165,6 +165,13 @@
 											<div class="inner">
 												<h4>Modeified AlexNet Model</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Result</h4>
+												<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
 											</div>
 										</article>
 									</div>
