--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Introduction</h3>
-									<p>One of the important issues in learning today is the ability to train on one distribution and test on a different one. It is also called dataset shift or domain adaptation. The problem of dataset shift can stem from the way input features are utilized, the way training and test sets are selected, data sparsity, shifts in the data distribution due to non-stationary environments, and also from changes in the activation patterns within layers of deep neural networks. Many companies are working on dealing with this problem, such as Amazon published a paper called CrossNorm and SelfNorm for generalization under distribution shifts in 2021 and Apple published a paper called Bridging the Domain Gap for Neural Model. Our primary focus of this project is the domain adaptation problem in wild animal recognition tasks on images from camera traps. Camera Traps are placed in the wild for scientists to collect information about wild animals. Camera Traps will be triggered when it detects any moving objects and can automatically collect large quantities of pictures. These data are crucial in monitoring the count, density of animal species in the area and understanding animal behavior. \\</p>
+									<p>One of the important issues in learning today is the ability to train on one distribution and test on a different one. It is also called dataset shift or domain adaptation. The problem of dataset shift can stem from the way input features are utilized, the way training and test sets are selected, data sparsity, shifts in the data distribution due to non-stationary environments, and also from changes in the activation patterns within layers of deep neural networks. Many companies are working on dealing with this problem, such as Amazon published a paper called CrossNorm and SelfNorm for generalization under distribution shifts in 2021 and Apple published a paper called Bridging the Domain Gap for Neural Model. Our primary focus of this project is the domain adaptation problem in wild animal recognition tasks on images from camera traps. Camera Traps are placed in the wild for scientists to collect information about wild animals. Camera Traps will be triggered when it detects any moving objects and can automatically collect large quantities of pictures. These data are crucial in monitoring the count, density of animal species in the area and understanding animal behavior. </p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -168,10 +168,16 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						
 											<div class="inner">
 												<h4>Result</h4>
 												<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
+											</div>
+											<br><br>
+											<div id="gallery">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+						
 											</div>
 										</article>
 									</div>
