--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 												<h4>Result</h4>
 												<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
 											</div>
-											<br><br>
+											
 											<div id="gallery">
 												<img src="images/pic01.jpg">
 												<img src="images/pic01.jpg">
@@ -188,7 +188,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Us</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>If you have any questions or any good ideas about our </p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
