--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 					<ul>
 						<li><a href="#one" class="active">Abstract</a></li>
 						<li><a href="#two">Introduction</a></li>
-						<li><a href="#three">Methods and Result</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#three">Methods</a></li>
+						<li><a href="#four">Result</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -79,7 +80,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Methods and Results</h3>
+									<h3>Methods</h3>
 									<p>For the method part, we mainly worked on three methods as below. The first two methods are more like a preparation of the data set before building the model and the last method is how we build our model.</p>
 									<div class="features">
 										<article>
@@ -185,7 +186,41 @@
 							</section>
 
 						<!-- Four -->
+						
 							<section id="four">
+								<div class="container">
+									<h3>Result</h3>
+									<p>One of the important issues in learning today is the ability to train on one distribution and test on a different one. It is also called dataset shift or domain adaptation. The problem of dataset shift can stem from the way input features are utilized, the way training and test sets are selected, data sparsity, shifts in the data distribution due to non-stationary environments, and also from changes in the activation patterns within layers of deep neural networks. Many companies are working on dealing with this problem, such as Amazon published a paper called CrossNorm and SelfNorm for generalization under distribution shifts in 2021 and Apple published a paper called Bridging the Domain Gap for Neural Model. Our primary focus of this project is the domain adaptation problem in wild animal recognition tasks on images from camera traps. Camera Traps are placed in the wild for scientists to collect information about wild animals. Camera Traps will be triggered when it detects any moving objects and can automatically collect large quantities of pictures. These data are crucial in monitoring the count, density of animal species in the area and understanding animal behavior. </p>
+									<div id="gallery">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+												<img src="images/pic01.jpg">
+											</div>
+								</div>
+							</section>
+						<!-- Five -->
+							<section id="five">
 								<div class="container">
 									<h3>Contact Us</h3>
 									<p>If you have any questions or any good ideas about our </p>
