--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@
 								<div class="container">
 									<h3>Result</h3>
 									<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
-									<div id="gallery">
-												<img src="images/acc.png">
-												<img src="images/time.png">
+									<p><img src="images/acc.png"></p>
+									<p><img src="images/time.png"></p>
 												
-											</div>
+					
 								</div>
 							</section>
 						<!-- Five -->
