--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/zscore.png" alt="" /></a>
 											<div class="inner">
 												<h4>Normalization</h4>
 												<p>Apply z-score normalization to intensities of each color channel of each pixels. Apply after background subtraction.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Model.png" alt="" /></a>
 											<div class="inner">
 												<h4>Modeified AlexNet Model</h4>
 												<p>Modified the Architecture of AlexNet: 5 learnable convolutional layers and 3 fully connected layers (Krizhevsky et al. 2012). The nonlinear activation function used is ReLU. The Input is  image of size 227x227 and the Output is softmaxed probability distribution across 100 animal category classes.</p>
@@ -179,10 +179,22 @@
 								<div class="container">
 									<h3>Result</h3>
 									<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
-									<img src="images/acc.png",style="width:20px;height:20px;">
-									<img src="images/time.png",style="width:20px;height:20px;">
-												
-					
+								        <div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/acc.png" alt="" /></a>
+											<div class="inner">
+												<h4>Accuracy</h4>
+												<p>Apply z-score normalization to intensities of each color channel of each pixels. Apply after background subtraction.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/time.png" alt="" /></a>
+											<div class="inner">
+												<h4>Efficiency</h4>
+												<p>Modified the Architecture of AlexNet: 5 learnable convolutional layers and 3 fully connected layers (Krizhevsky et al. 2012). The nonlinear activation function used is ReLU. The Input is  image of size 227x227 and the Output is softmaxed probability distribution across 100 animal category classes.</p>
+											</div>
+										</article>
+					                                </div>
 								</div>
 							</section>
 						<!-- Five -->
