--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Group B19</a></h1>
+					<span class="image avatar"><img src="images/ucsdlogo.png" alt="" /></span>
+					<h1 id="logo"><a href="#">Group B319-2</a></h1>
 					<p>Bill, Alina, Guanlin</p>
 				</header>
 				<nav id="nav">
@@ -66,14 +66,7 @@
 								<div class="container">
 									<h3>Introduction</h3>
 									<p>One of the important issues in learning today is the ability to train on one distribution and test on a different one. It is also called dataset shift or domain adaptation. The problem of dataset shift can stem from the way input features are utilized, the way training and test sets are selected, data sparsity, shifts in the data distribution due to non-stationary environments, and also from changes in the activation patterns within layers of deep neural networks. Many companies are working on dealing with this problem, such as Amazon published a paper called CrossNorm and SelfNorm for generalization under distribution shifts in 2021 and Apple published a paper called Bridging the Domain Gap for Neural Model. Our primary focus of this project is the domain adaptation problem in wild animal recognition tasks on images from camera traps. Camera Traps are placed in the wild for scientists to collect information about wild animals. Camera Traps will be triggered when it detects any moving objects and can automatically collect large quantities of pictures. These data are crucial in monitoring the count, density of animal species in the area and understanding animal behavior. </p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
+									
 								</div>
 							</section>
 
@@ -178,20 +171,20 @@
 							<section id="four">
 								<div class="container">
 									<h3>Result</h3>
-									<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal. The accuracy in predicting both the original test set and the balanced test increases with the use of this technique. However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
+									<p>The model's performance on test data from unseen locations exhibits improvement with the application of background removal.  </p>
 								        <div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/acc.png" alt="" /></a>
 											<div class="inner">
 												<h4>Accuracy</h4>
-												<p>Apply z-score normalization to intensities of each color channel of each pixels. Apply after background subtraction.</p>
+												<p>The accuracy in predicting both the original test set and the balanced test increases with the use of this technique.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/time.png" alt="" /></a>
 											<div class="inner">
 												<h4>Efficiency</h4>
-												<p>Modified the Architecture of AlexNet: 5 learnable convolutional layers and 3 fully connected layers (Krizhevsky et al. 2012). The nonlinear activation function used is ReLU. The Input is  image of size 227x227 and the Output is softmaxed probability distribution across 100 animal category classes.</p>
+												<p>However, it is worth noting that the "Background Mask" method necessitates a considerably longer preprocessing time and relatively higher prediction time compared to other approaches.</p>
 											</div>
 										</article>
 					                                </div>
