--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/bd.jpeg" alt="" /></a>
 
 											<div class="inner">
 												<h4>Background Removal</h4>
