--- a/index.html
+++ b/index.html
@@ -86,10 +86,18 @@
 											</div>
 											<br><br>
 											<div id="gallery">
+												<div class="column">
 												<img src="images/img4454.png">
+												</div>
+												<div class="column">
 												<img src="images/img4454_subtracted.png">
+													</div>
+												<div class="column">
 												<img src="images/img4454_masked.png">
-												<img src="iimg4454_binary.png">
+													</div>
+												<div class="column">
+												<img src="images/img4454_binary.png">
+													</div>
 												
 											</div>
 										</article>
