--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 										<article>
 											
 											<div class="inner">
+												<a href="#" class="image"><img src="images/cnn.png" alt="" /></a>
 												<div class="23">
 												<h4>Modeified AlexNet Model</h4>
 												<p>Modified the Architecture of AlexNet: 5 learnable convolutional layers and 3 fully connected layers (Krizhevsky et al. 2012). The nonlinear activation function used is ReLU. The Input is  image of size 227x227 and the Output is softmaxed probability distribution across 100 animal category classes.</p>
