--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 									</header>
 									<p>Camera traps are a widely used tool in wildlife research and conservation, but factors such as changing of cameras, poor performance in extreme environments and damage by wildlife may be hindering the effectiveness of the technology. Our project is trying to solve the problem of changing cameras by adding the optimal transportation layer to our modified ALexNet CNN model that will be trained on the iwildCam dataset from WILDs collected by Stanford. In order to make our model more efficient and precise, we will also try to remove the background in each image that will only have the animal in the image and normalize these images with z-score methods to adjust pixels to a common scale. For testing, we will build the same model without optimal transportation strategies or these optimization steps we build to evaluate our models.</p>
 								</div>
+								<div class="column">
+									<img src="images/iwildcam_dataset.jpeg" style="width:680px;height:500px;">
+								</div>
 							</section>
 
 						<!-- Two -->
@@ -67,6 +70,9 @@
 									<h3>Introduction</h3>
 									<p>One of the important issues in learning today is the ability to train on one distribution and test on a different one. It is also called dataset shift or domain adaptation. The problem of dataset shift can stem from the way input features are utilized, the way training and test sets are selected, data sparsity, shifts in the data distribution due to non-stationary environments, and also from changes in the activation patterns within layers of deep neural networks. Many companies are working on dealing with this problem, such as Amazon published a paper called CrossNorm and SelfNorm for generalization under distribution shifts in 2021 and Apple published a paper called Bridging the Domain Gap for Neural Model. Our primary focus of this project is the domain adaptation problem in wild animal recognition tasks on images from camera traps. Camera Traps are placed in the wild for scientists to collect information about wild animals. Camera Traps will be triggered when it detects any moving objects and can automatically collect large quantities of pictures. These data are crucial in monitoring the count, density of animal species in the area and understanding animal behavior. </p>
 									
+								</div>
+								<div class="column">
+									<img src="images/babbooncount.jpeg" style="width:680px;height:400px;">
 								</div>
 							</section>
 
